# socketxx

./: .gitignore  Makefile.am  README.md  configure.ac  socketxx.pc.in
socket++/: Makefile.am  base_inet.cpp  base_inet.hpp  base_io.cpp  base_io.hpp  base_ssl.cpp  base_ssl.hpp  base_unixsock.cpp  base_unixsock.hpp  defs.hpp  quickdefs.h
socket++/handler/: Makefile.am  socket_client.cpp  socket_client.hpp  socket_server.cpp  socket_server.hpp
socket++/io/: Makefile.am  simple_socket.cpp  simple_socket.hpp  text_buffered.cpp  text_buffered.hpp  tunnel.cpp  tunnel.hpp
socketxx.xcodeproj/: project.pbxproj
socketxx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
