AM_CXXFLAGS = @AM_CXXFLAGS@
ACLOCAL_AMFLAGS = -I m4

noinst_LTLIBRARIES = libsocketxxhandlers.la
libsocketxxhandlers_includedir = $(includedir)/socket++/handler
libsocketxxhandlers_include_HEADERS = socket_client.hpp socket_server.hpp
libsocketxxhandlers_la_SOURCES = socket_client.cpp socket_server.cpp
